--- a/src/components/chatComponents/chatListComponents/listItemComponent/listItemComponent.css
+++ b/src/components/chatComponents/chatListComponents/listItemComponent/listItemComponent.css
@@ -18,6 +18,7 @@
     flex-direction: column;
     width: 190px;
     margin: 6px 0;
+    overflow: hidden;
 }
 
 .listItem__title {
